--- a/coinFlipRoom.html
+++ b/coinFlipRoom.html
@@ -3,7 +3,7 @@
   <head>
     <!-- <link rel="stylesheet" href="./css/reset.css"> -->
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/Room1.css">
+    <link rel="stylesheet" href="./css/coinFlipRoom.css">
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
