created about me page and added everyone's profile pictures.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -11,10 +11,52 @@
   </header>
   <main>
     <img src="images/pentagram.png" id="pentagram">
-    <img src="images/anthony.jpg" id="anthony">
-    <img src="images/andrea.jfif" id="andrea">
-    <img src="images/george.jfif" id="george">
-    <img src="images/zack.jfif" id="zack">
+    <div id="anthonyDiv" class="profile" onclick="popUp1()">
+      <img src="images/anthony.jpg" id="anthony">
+      <div class="popup" id="anthonyPopUp">
+        <p>Anthony Morton</p>
+        <p>GitHub: https://github.com/anthonylouismorton</p>
+        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
+        <p>Email: anthonymorton760@gmail.com</p>
+      </div>
+    </div>
+    <div id="andreaDiv" class="profile" onclick="popUp2()">
+      <img src="images/andrea.jfif" id="andrea">
+      <div class="popup" id="andreaPopUp" >
+        <p>Anthony Morton</p>
+        <p>GitHub: https://github.com/anthonylouismorton</p>
+        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
+        <p>Email: anthonymorton760@gmail.com</p>
+      </div>
+    </div>
+    <div id="georgeDiv" class="profile" onclick="popUp3()">
+      <img src="images/george.jfif" id="george">
+      <div class="popup" id="georgePopUp">
+        <p>Anthony Morton</p>
+        <p>GitHub: https://github.com/anthonylouismorton</p>
+        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
+        <p>Email: anthonymorton760@gmail.com</p>
+      </div>
+    </div>
+    <div id="zackDiv" class="profile" onclick="popUp4()">
+      <img src="images/zack.jfif" id="zack">
+      <div class="popup" id="zackPopUp">
+        <p>Anthony Morton</p>
+        <p>GitHub: https://github.com/anthonylouismorton</p>
+        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
+        <p>Email: anthonymorton760@gmail.com</p>
+      </div>
+    </div>
+    <div id="roopDiv" class="profile" onclick="popUp5()">
+      <img src="images/roop.jfif"  id="roop">
+      <div class="popup" id="roopPopUp">
+        <p>Anthony Morton</p>
+        <p>GitHub: https://github.com/anthonylouismorton</p>
+        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
+        <p>Email: anthonymorton760@gmail.com</p>
+      </div>
+    </div>
   </main>
+  <script src="js/aboutUs.js"></script>
 </body>
 </html>
