--- a/rpsRoom.html
+++ b/rpsRoom.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link rel="stylesheet" href="./css/reset.css"> -->
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/rpsRoom.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Nosifer&display=swap" rel="stylesheet">
   </head>
     <body>
       <header></header>
       <main>
-        <div id="rockPaperScissors">
-          <button type="button" id="rock" class="hidden">Rock</button>
-          <button type="button" id="paper" class="hidden">Paper</button>
-          <button type="button" id="scissors" class="hidden">Scissors</button>
-        </div>
+        <article class="comic">
+          <div class="panel">
+            <p class="text top-left">Funny title for the ...</p>
+            <p class="text bottom-right">... rock, paper, scissors game</p>
+          </div>
+          <div class="panel">
+            <img id="" src="">
+            <p class="text top-left">Still need ideas</p>
+            <p class="text bottom-right">for what text to put here.</p>
+          </div>
+          <div class="panel">
+            <img id="" src="">
+            <p class="text top-left">not quite sure what the story for this room should be.</p>
+          </div>
+          <div class="panel">
+            <img id="" src="">
+            <p class="text top-left">luckily all this text can be changed!</p>
+            <p class="text bottom-right">same with the boxes and colors and images and backgrounds</p>
+          </div>
+          <div class="panel">
+          <div id="rockPaperScissors">
+            <button type="button" id="rock" class="hidden">Rock</button>
+            <button type="button" id="paper" class="hidden">Paper</button>
+            <button type="button" id="scissors" class="hidden">Scissors</button>
+          </div>
+          </div>
+        </article>
       </main>
       <script src="./js/rockppr.js"></script>
     </body>
