--- a/riddleRoom.html
+++ b/riddleRoom.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link rel="stylesheet" href="./css/reset.css"> -->
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/riddleRoom.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Nosifer&display=swap" rel="stylesheet">
   </head>
     <body>
       <header></header>
       <main>
-
+        <article class="comic">
+          <div class="panel">
+            <p class="text top-left">Funny title for the ...</p>
+            <p class="text bottom-right">... rock, paper, scissors game</p>
+          </div>
+          <div class="panel">
+            <img id="" src="">
+            <p class="text top-left">Still need ideas</p>
+            <p class="text bottom-right">for what text to put here.</p>
+          </div>
+          <div class="panel">
+            <img id="" src="">
+            <p class="text top-left">not quite sure what the story for this room should be.</p>
+          </div>
+          <div class="panel">
+            <img id="" src="">
+            <p class="text top-left">luckily all this text can be changed!</p>
+            <p class="text bottom-right">same with the boxes and colors and images and backgrounds</p>
+          </div>
+          <div class="panel"></div>
+        </article>
       </main>
       <script src="./js/app.js"></script>
-      <script src="./js/challengeRoom.js"></script>
+      <!-- <script src="./js/challengeRoom.js"></script> -->
     </body>
 </html>
