added more styling to about page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,9 +15,10 @@
       <img src="images/anthony.jpg" id="anthony">
       <div class="popup" id="anthonyPopUp">
         <p>Anthony Morton</p>
-        <p>GitHub: https://github.com/anthonylouismorton</p>
-        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
-        <p>Email: anthonymorton760@gmail.com</p>
+        <p>GitHub: <a href="https://github.com/anthonylouismorton">https://github.com/anthonylouismorton</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/anthony-louis-morton/">https://www.linkedin.com/in/anthony-louis-morton/</a></p>
+        <p>Email: <a href="mailto: anthonymorton760@gmail.com">anthonymorton760@gmail.com</a></p>
+        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
       </div>
     </div>
     <div id="andreaDiv" class="profile" onclick="popUp2()">
@@ -27,6 +28,7 @@
         <p>GitHub: https://github.com/anthonylouismorton</p>
         <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
         <p>Email: anthonymorton760@gmail.com</p>
+        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
       </div>
     </div>
     <div id="georgeDiv" class="profile" onclick="popUp3()">
@@ -36,6 +38,7 @@
         <p>GitHub: https://github.com/anthonylouismorton</p>
         <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
         <p>Email: anthonymorton760@gmail.com</p>
+        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
       </div>
     </div>
     <div id="zackDiv" class="profile" onclick="popUp4()">
@@ -45,6 +48,7 @@
         <p>GitHub: https://github.com/anthonylouismorton</p>
         <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
         <p>Email: anthonymorton760@gmail.com</p>
+        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
       </div>
     </div>
     <div id="roopDiv" class="profile" onclick="popUp5()">
@@ -54,6 +58,7 @@
         <p>GitHub: https://github.com/anthonylouismorton</p>
         <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
         <p>Email: anthonymorton760@gmail.com</p>
+        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
       </div>
     </div>
   </main>
