created living room, edits to css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header>
     <nav id="menu">
       <ul>
-        <li>begin game</li>
-        <li>continue</li>
-        <li>about us</li>
+        <li><a href="living_room.html">begin new game</a></li>
+        <li>continue game</li>
+        <li>about the gamemakers</li>
       </ul>
     </nav>
   </header>
