--- a/riddleRoom.html
+++ b/riddleRoom.html
@@ -14,7 +14,7 @@
         <article class="comic">
           <div class="panel">
             <p class="text top-left">Funny title for the ...</p>
-            <p class="text bottom-right">... rock, paper, scissors game</p>
+            <p class="text bottom-right">... riddle game</p>
           </div>
           <div class="panel">
             <img id="" src="">
