fixed heads or tails button

--- a/coinFlipRoom.html
+++ b/coinFlipRoom.html
@@ -50,9 +50,9 @@
         <div class="panel">
           <div id="headsOrTails" class="speech">
             <p>Call it, username:</p>
-          <button type="button" id="heads" class="hidden">heads</button>
+          <button type="button" id="heads">heads</button>
           <p>or</p>
-          <button type="button" id="tails" class="hidden">tails</button>
+          <button type="button" id="tails">tails</button>
           </div>
         </div>
           <div class="panel">
@@ -71,10 +71,10 @@
           <button type="button" id="paper" class="hidden">Paper</button>
           <button type="button" id="scissors" class="hidden">Scissors</button>
         </div> -->
-         <div id="headsOrTails">
+         <!-- <div id="headsOrTails">
           <button type="button" id="heads">Heads</button>
           <button type="button" id="tails">Tails</button>
-        </div>
+        </div> -->
         <form action="Room2.html"></form>
           <button type="submit" id="toRoom2" class="hidden">Go to Room 2</button>
         </form>
