taking a dinner break

--- a/living_room.html
+++ b/living_room.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Living Room</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/living_room.css">
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
@@ -13,7 +14,7 @@
       <main>
         <article class="comic">
           <div class="panel">
-            <p class="text top-left">Everything is black. The cotton from the hood on Username's head itches.</p>
+            <p class="text top-left">Everything is black. The hood on Username's head itches.</p>
             <p class="text bottom-right">The stench of rotting flesh and dried blood fills Username's nostrils.</p>
           </div>
           <div class="panel">
@@ -22,7 +23,7 @@
             <p class="text bottom-right">His breath is cold and damp like the fog in a graveyard.</p>
           </div>
           <div class="panel">
-            <img id="" src="">
+            <img id="hauntedRoom" src="images/hauntedRoom.jpg">
             <p class="text top-left">"Welcome to the House of Hell, Username."</p>
             <p class="text bottom-right">"There are several psychopaths living here and they each like to play games riddles. If you want to play with with them, you just may be able to excape with your life!"</p>
           </div>
