--- a/coinFlipRoom.html
+++ b/coinFlipRoom.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Coin Flip</title>
     <link rel="stylesheet" href="./css/reset.css">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="jsStyle.css">
@@ -12,15 +13,6 @@
   </head>
     <body>
       <header>
-        <div>
-          <p>Lives 
-            <span id="firstHeart">&hearts;</span>
-            <span id="secondHeart">&hearts;</span>
-            <span id="thirdHeart">&hearts;</span>
-            <span id="fourthHeart">&hearts;</span>
-            <span id="fifthHeart">&hearts;</span>
-          </p>
-        </div>
       </header>
       <main>
         <article class="comic">
@@ -48,6 +40,7 @@
               to call it."</p>
           </div>
         <div class="panel">
+          <img id="" src="">
           <div id="headsOrTails" class="speech">
             <p>Call it, username:</p>
           <button type="button" id="heads">heads</button>
@@ -58,7 +51,13 @@
           <div class="panel">
             <p class="text top-left">player information:</p>
             <ul id="player_info">
-              <li>lives:</li>
+              <li>lives:
+                <span id="firstHeart">&hearts;</span>
+                <span id="secondHeart">&hearts;</span>
+                <span id="thirdHeart">&hearts;</span>
+                <span id="fourthHeart">&hearts;</span>
+                <span id="fifthHeart">&hearts;</span>
+              </li>
               <li>current level:</li>
               <li>restart level</li>
               <li>restart game</li>
@@ -75,9 +74,7 @@
           <button type="button" id="heads">Heads</button>
           <button type="button" id="tails">Tails</button>
         </div> -->
-        <form action="Room2.html"></form>
-          <button type="submit" id="toRoom2" class="hidden">Go to Room 2</button>
-        </form>
+        <button type="submit" id="toRoshambo" class="hidden"><a href="rpsRoom.html">roshambo</button></a>
       </main>
       <script src="./js/app.js"></script>
       <script src="./js/coinflip.js"></script>
