about to merge all files

--- a/rpsRoom.html
+++ b/rpsRoom.html
@@ -30,13 +30,13 @@
           </div>
           <div class="panel">
             <img id="" src="">
-            <p class="text top-left">"Now scissors! How they feel in your hand slicing through skin and muscle ..."</p>
+            <p class="text top-left">"But scissors! The feeling in your hand as they slice through skin and muscle ..."</p>
             <p class="text bottom-right">"... makes you realize our bodies are just bags of meat waiting to be opened!"</p>
           </div>
           <div class="panel">
             <img id="" src="">
             <div id="rockPaperScissors" class="speech">
-              <p>Your choice Username. Pick a weapon.</p>
+              <p>Pick a weapon Username:</p>
               <button type="button" id="rock">Rock</button>
               <button type="button" id="paper">Paper</button>
               <p>or</p>
