--- a/coinFlipRoom.html
+++ b/coinFlipRoom.html
@@ -17,18 +17,17 @@
       <main>
         <article class="comic">
           <div class="panel">
-            <img id="kingGeorge" src="images/kinggeorge.png">
             <p class="text top-left">"What's the most you've ever lost ...</p>
             <p class="text bottom-right">... on a coin toss?"</p>
           </div>
           <div class="panel">
             <img id="milk" src="images/milk.png">
-            <p class="text top-left">the man behind the voice comes into view.</p>
+            <p class="text top-left">our first serial killer comes into view.</p>
             <p class="text bottom-right">He's sipping milk.</p>
           </div>
           <div class="panel">
             <img id="shotgun" src="images/shotgun.png">
-            <p class="text top-left">things don't look good.</p>
+            <p class="text top-left">things look grim.</p>
           </div>
           <div class="panel">
             <img id="real_coin" src="images/real_coin.jpg">
@@ -74,7 +73,7 @@
           <button type="button" id="heads">Heads</button>
           <button type="button" id="tails">Tails</button>
         </div> -->
-        <button type="submit" id="toRoshambo" class="hidden"><a href="rpsRoom.html">roshambo</button></a>
+        <button type="submit" id="toRoshambo"><a href="rpsRoom.html">roshambo</button></a>
       </main>
       <script src="./js/app.js"></script>
       <script src="./js/coinflip.js"></script>
