created you died screen. worked on css

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <title>House of Hell</title>
-  <link href="reset.css" type="text/css" rel="stylesheet"/>
-  <link href="aboutUs.css" type="text/css" rel="stylesheet"/>
+  <link href="./reset.css" type="text/css" rel="stylesheet"/>
+  <link href="./css/aboutUs.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
   <header>
