added continue button logic

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <header>
     <nav id="menu">
       <ul>
-        <li>begin game</li>
-        <li>continue</li>
-        <li>about us</li>
+        <li><button type="button" id="start"><a href="living_room.html">Start Game</a></button></li>
+        <li><button type="button" id="continue">Continue</button></li>
+        <li><button type="button" id="about"><a href="aboutUs.html">About Us</a></button></li>
       </ul>
     </nav>
   </header>
