--- a/coinFlipRoom.html
+++ b/coinFlipRoom.html
@@ -87,7 +87,7 @@
           <button type="button" id="heads">Heads</button>
           <button type="button" id="tails">Tails</button>
         </div> -->
-        <button type="submit" id="toRoshambo"><a href="rpsRoom.html">roshambo</button></a>
+        <button type="submit" id="toRoshambo" class="hidden"><a href="rpsRoom.html">roshambo</button></a>
       </main>
       <script src="./js/app.js"></script>
       <script src="./js/coinflip.js"></script>
