corrected some css

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
   <title>House of Hell</title>
-  <link href="css/reset.css" type="text/css" rel="stylesheet"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet"/>
+  <link href="./css/reset.css" type="text/css" rel="stylesheet"/>
+  <link href="./css/style.css" type="text/css" rel="stylesheet"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Nosifer&display=swap" rel="stylesheet">
 </head>
 <body>
-  <img id="hell_house" src="images/hellHouse.png">
+  <img id="hell_house" src="./images/hellHouse2.jpg">
   <header>
     <nav id="menu">
       <ul>
-        <li><a href="living_room.html">begin new game</a></li>
+        <li><a href="./living_room.html">begin new game</a></li>
         <li>continue game</li>
         <li>about the gamemakers</li>
       </ul>
     </nav>
-  </header>
-  <main>
     <section id="title">
       <h1 id ="title">House of Hell</h1>
     </section>
+  </header>
+  <main>
   </main>
 </body>
 </html>
