fixed buttons and rps game

--- a/rpsRoom.html
+++ b/rpsRoom.html
@@ -36,7 +36,7 @@
             <p class="text bottom-right">How about roshambo!</p>
           </div>
           <div class="panel">
-            <img id="rock" src="images/bloodyRockBLK.jpeg">
+            <img id="bloodyRock" src="images/bloodyRockBLK.jpeg">
             <p class="text top-left">"I found my first killing stone at the river."</p>
             <p class="text bottom-right">"No sound better in the whole world than the crack of a man's skull."</p>
           </div>
@@ -45,7 +45,7 @@
             <p class="text bottom-right">"I never killed nobody with a piece o' paper before tho..."</p>
           </div>
           <div class="panel">
-            <img id="scissors" src="images/bloodyScissorsBLK.jpg">
+            <img id="bloodyScissors" src="images/bloodyScissorsBLK.jpg">
             <p class="text top-left">"But scissors! The feeling as they slice through skin and muscle ..."</p>
             <p class="text bottom-right">"... makes you realize our bodies are just bags of meat waiting to be opened!"</p>
           </div>
