--- a/riddleRoom.html
+++ b/riddleRoom.html
@@ -18,6 +18,7 @@
         border-radius: 5px;
         font-size: 80%;
         margin-left: 10px;
+        z-index: 1;
       }
       input[type=text] {
         background-color: rgba(179, 139, 7, 0.849);
@@ -25,6 +26,7 @@
         color: black;
         font-family: 'Bangers', cursive;
         margin-left: 10px;
+        z-index: 1;
       }
     </style>
   </head>
