created js code for UN and BY

--- a/living_room.html
+++ b/living_room.html
@@ -28,17 +28,17 @@
             <p class="text top-left">"Welcome to the House of Hell, Username."</p>
             <p class="text bottom-right">"There are three psychopaths scattered about and they like to play games and riddles. If you want to play with with them, you just may be able to escape with your life!"</p>
           </div>
-          <div class="panel">
+          <!-- <div class="panel">
             <img id="" src="">
             <p class="text top-left">the choice is yours username. will you play the games you came here for ...</p>
             <p class="text bottom-right">... or would you prefer to give up and die now?</p>
-          </div>
+          </div> -->
           <div class="panel">
             <div id="headsOrTails" class="speech">
               <p>What will you do, username?</p>
-            <button type="button" id="heads" class="hidden"><a href="coinFlipRoom.html">play game</a></button>
+            <button type="button" id="heads"><a href="coinFlipRoom.html">play game</a></button>
             <p>or</p>
-            <button type="button" id="tails" class="hidden"><a href="index.html">give up and die</a></button>
+            <button type="button" id="tails"><a href="index.html">give up and die</a></button>
             </div>
           </div>
         </article>
