--- a/riddleRoom.html
+++ b/riddleRoom.html
@@ -75,7 +75,7 @@
           <div class="panel">
             <img id="anthony" src="images/anthony.jpg">
             <p class="text top-left"> And last, but not least ...</p>
-            <p class="text bottom-right">... Riddle me this Username!</p>
+            <p class="text bottom-right">... Riddle me this<span id="username"></span></p>
           </div>
           <div class="panel">
             <img id="coffin" src="images/coffin.jpg">
@@ -89,7 +89,7 @@
           </div>
           <div class="panel">
             <img id="livingRoom" src="images/livingRoom.jpg">
-            <p class="text top-left">Which room do ghosts avoid?</p>
+            <p class="text bottom-right">Which room do ghosts avoid?</p>
             <!-- <form id="riddle2">
               <label for="riddle2"></label><br>
               <input type="text" id="answer2"><br>
@@ -105,6 +105,25 @@
               <input type="submit" value="Submit">
             </form> -->
             <p class="text bottom-right">Once I had thoughts, but now I'm white and empty.</p>
+          </div>
+          <div class="panel">
+            <form id ="form1"> 
+              <div id="riddle1">
+                <label for="riddleone"></label><br>
+                <input type="text" name ="riddleone" id="answer1"><br>
+                <input type="submit" value="Submit" id="riddleSubmit">
+              </div>
+              <div id="riddle2" class="hidden">
+                <label for="riddletwo"></label><br>
+                <input type="text" name ="riddletwo" id="answer2"><br>
+                <input type="submit" value="Submit" id="riddleSubmit">
+              </div>
+              <div id="riddle3" class="hidden">
+              <label for="riddlethree"></label><br>
+              <input type="text" name ="riddlethree"id="answer3"><br>
+              <input type="submit" value="Submit" id="riddleSubmit">
+              </div>
+            </form>
           </div>
           <div class="panel">
             <p class="text top-left">player information:</p>
@@ -123,24 +142,25 @@
             </ul>
           </div>
         </article>
-        <form id ="form1"> 
+        <!-- <form id ="form1"> 
           <div id="riddle1">
-            <label for="riddleone">What is your guess?</label><br>
+            <label for="riddleone"></label><br>
             <input type="text" name ="riddleone" id="answer1"><br>
             <input type="submit" value="Submit" id="riddleSubmit">
           </div>
           <div id="riddle2" class="hidden">
-            <label for="riddletwo">What is your guess?</label><br>
+            <label for="riddletwo"></label><br>
             <input type="text" name ="riddletwo" id="answer2"><br>
             <input type="submit" value="Submit" id="riddleSubmit">
           </div>
           <div id="riddle3" class="hidden">
-          <label for="riddlethree">What is your guess?</label><br>
+          <label for="riddlethree"></label><br>
           <input type="text" name ="riddlethree"id="answer3"><br>
           <input type="submit" value="Submit" id="riddleSubmit">
           </div>
-        </form>
+        </form> -->
       </main>
+      <script src="./js/home.js"></script>
       <script src="./js/app.js"></script>
       <script src="./js/riddle.js"></script>
       <!-- <script src="./js/challengeRoom.js"></script> -->
