--- a/rpsRoom.html
+++ b/rpsRoom.html
@@ -52,7 +52,7 @@
           <div class="panel">
             <img id="zackTwo" src="images/zack.jfif">
             <div id="rockPaperScissors" class="speech">
-              <p>Pick a weapon Username:</p>
+              <p>Pick a weapon<span id="username"></span></p>
               <button type="button" id="rock">Rock</button>
               <button type="button" id="paper">Paper</button>
               <p>or</p>
@@ -79,6 +79,7 @@
         </article>
         <button type="submit" id="toRiddler" class="hidden" ><a href="riddleRoom.html">riddler</a></button>
       </main>
+      <script src="./js/home.js"></script>
       <script src="./js/app.js"></script>
       <script src="./js/rockppr.js"></script>
     </body>
