--- a/aboutUs.html
+++ b/aboutUs.html
@@ -24,11 +24,11 @@
     <div id="andreaDiv" class="profile" onclick="popUp2()">
       <img src="images/andrea.jfif" id="andrea">
       <div class="popup" id="andreaPopUp" >
-        <p>Anthony Morton</p>
-        <p>GitHub: https://github.com/anthonylouismorton</p>
-        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
-        <p>Email: anthonymorton760@gmail.com</p>
-        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
+        <p>Andrea </p>
+        <p>GitHub: https://github.com/Andreavpowell</p>
+        <p>LinkedIn: https://www.linkedin.com/in/andreavpowell/</p>
+        <p>Email: andreavpowell@gmail.com</p>
+        <p>About: Software Developer breaking into the tech industry. I have always been interested in this field, but wasn't given many opportunities to explore it due to being raised in a small southern town.I have many years of experience in the sales and customer service industry. I hope to help transform the tech world into a more welcoming environment for young women and help people that are interested in lower income areas.</p>
       </div>
     </div>
     <div id="georgeDiv" class="profile" onclick="popUp3()">
@@ -44,21 +44,22 @@
     <div id="zackDiv" class="profile" onclick="popUp4()">
       <img src="images/zack.jfif" id="zack">
       <div class="popup" id="zackPopUp">
-        <p>Anthony Morton</p>
-        <p>GitHub: https://github.com/anthonylouismorton</p>
-        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
-        <p>Email: anthonymorton760@gmail.com</p>
-        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
+        <p>Zachary Good</p>
+        <p>GitHub: https://github.com/zachary-good</p>
+        <p>LinkedIn: linkedin.com/zacharyjgood
+        </p>
+        <p>Email: zjgood13@gmail.com</p>
+        <p>About: Zack is an Army veteran and software developer who enjoys long walks on the beach. He is originally from the east coast but has made the great migration to the pacific north west in pursuit of a career in tech.</p>
       </div>
     </div>
     <div id="roopDiv" class="profile" onclick="popUp5()">
       <img src="images/roop.jfif"  id="roop">
       <div class="popup" id="roopPopUp">
-        <p>Anthony Morton</p>
-        <p>GitHub: https://github.com/anthonylouismorton</p>
-        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
-        <p>Email: anthonymorton760@gmail.com</p>
-        <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
+        <p>Roop Hayer</p>
+        <p>GitHub: https://github.com/RoopHayer</p>
+        <p>LinkedIn: https://www.linkedin.com/in/roophayer</p>
+        <p>Email: ruphayer@gmail.com</p>
+        <p>About: Software Developer with background in management, mechanical and electrical fields. US Air Force veteran with a wide range of experience in 8 years of career. Enjoys watching TV series and movies. Love exploring new hiking trails in Northern California. Believes in healthy body healthy mind.</p>
       </div>
     </div>
   </main>
