--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header>
     <nav id="menu">
       <ul>
-        <li><button type="button" id="start"><a href="living_room.html">Start Game</a></button></li>
-        <li><button type="button" id="continue">Continue</button></li>
-        <li><button type="button" id="about"><a href="aboutUs.html">About Us</a></button></li>
+        <li><button type="button" class="button" id="start"><a href="living_room.html">Start Game</a></button></li>
+        <li><button type="button" class="button" id="continue">  Continue  </button></li>
+        <li><button type="button" class="button" id="about"><a href="aboutUs.html">About Us</a></button></li>
       </ul>
     </nav>
     <section id="title">
@@ -23,14 +23,15 @@
     </section>
   </header>
   <main>
-    <div id="leaderboard">
+    <!-- <div id="leaderboard">
 
-    </div>
+    </div> -->
     <form id ="userinfo">
       <fieldset>
         <legend>Enter Your Information</legend>
         <label>Name:</label>
         <input type ="text" name ="name" id ="name_user" required >
+        <p> </p>
         <label>Month:</label>
         <input type ="number" name="month" min="1" max="12" id="month_user" required >
         <label>Day:</label>
@@ -38,7 +39,7 @@
         <label>Year:</label>
         <input type = "number" name ="year" min="1900" max ="2021" id="year_user" required>
       </fieldset>
-      <button type="submit"> Submit</button>
+      <button class="button" type="submit"> Submit</button>
     </form>
   </main>
     <script src="./js/app.js"></script>
