--- a/rpsRoom.html
+++ b/rpsRoom.html
@@ -20,7 +20,7 @@
             <p>Died</p>
           </div>
           <div id="menu">
-            <button type="submit">Retry Level</button>
+            <button type="submit"><a href="rpsRoom.html">Retry Level</a></button>
             <button type="submit"><a href="index.html">Homepage</a></button>
             <button type="button"><a href="aboutUs.html">About Us</a></button>
           </div>
@@ -70,9 +70,8 @@
                 <span id="fourthHeart">&hearts;</span>
                 <span id="fifthHeart">&hearts;</span>
               </li>
-              <li>current level:</li>
-              <li>restart level</li>
-              <li>restart game</li>
+              <li><a href="rpsRoom.html">Restart Level</a></li>
+              <li><a href="living_room.html">Restart Game</a></li>
               <li>save game</li>
             </ul>
           </div>
