--- a/living_room.html
+++ b/living_room.html
@@ -25,14 +25,9 @@
           </div>
           <div class="panel">
             <img id="hauntedRoom" src="images/hauntedRoom.jpg">
-            <p class="text top-left">"Welcome to the House of Hell,<span id="username"></span></p>
+            <p class="text top-left">"Welcome to the House of Hell ...<span id="username"></span>!"</p>
             <p class="text bottom-right">"There are three psychopaths scattered about and they like to play games and riddles. If you want to play with with them, you just may be able to escape with your life!"</p>
           </div>
-          <!-- <div class="panel">
-            <img id="" src="">
-            <p class="text top-left">the choice is yours username. will you play the games you came here for ...</p>
-            <p class="text bottom-right">... or would you prefer to give up and die now?</p>
-          </div> -->
           <div class="panel">
             <div id="headsOrTails" class="speech">
               <p>What will you do?<span id="username"></span></p>
@@ -46,6 +41,5 @@
       <script src="js/home.js"></script>
       <script src="./js/app.js"></script>
       <script src="./js/living_room.js"></script>
-      <!-- <script src="./js/challengeRoom.js"></script> -->
     </body>
 </html>
