added surprise image on the game over screen

--- a/riddleRoom.html
+++ b/riddleRoom.html
@@ -48,17 +48,16 @@
       <div id="victory" class="hidden">
         <div>
           <div id="sara">
-            <img src="/images/evilSaraHorns.gif" id="saraImage">
+            <img src="./images/evilSaraHorns.gif" id="saraImage">
           </div>
           <div id="congrats" class="typewriter">
             <p>Congratulations!</p>
             <p>You survived</p>
             <p>the house of hell...</p>
             <p>Wait... </p>
-            <p>someone's coming...</p>
-            <input type="submit" value="submit"></input>
+            <p>someone's... coming...</p>
           </div>
-          <div id="victoryMenu">
+          <div id="victoryMenu" class="typewriter2">
             <p>No one can escape</p>
             <p>the house of hell</p>
               <div id="victoryButtons">
