altered about us page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,6 +4,10 @@
   <title>House of Hell</title>
   <link href="./reset.css" type="text/css" rel="stylesheet"/>
   <link href="./css/aboutUs.css" type="text/css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Nosifer&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -11,10 +15,14 @@
   </header>
   <main>
     <img src="images/pentagram.png" id="pentagram">
+    <div id="saraDiv">
+     <img src="images/fire2.gif" id="saraFire">
+     <img src="images/evilSaraHead.png" id="sara">
+    </div>
     <div id="anthonyDiv" class="profile" onclick="popUp1()">
-      <img src="images/anthony.jpg" id="anthony">
+      <img src="images/anthonyMortonBLK.jpg" id="anthony">
       <div class="popup" id="anthonyPopUp">
-        <p>Anthony Morton</p>
+        <p><u>Anthony Morton</u></p>
         <p>GitHub: <a href="https://github.com/anthonylouismorton">https://github.com/anthonylouismorton</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/anthony-louis-morton/">https://www.linkedin.com/in/anthony-louis-morton/</a></p>
         <p>Email: <a href="mailto: anthonymorton760@gmail.com">anthonymorton760@gmail.com</a></p>
@@ -22,19 +30,19 @@
       </div>
     </div>
     <div id="andreaDiv" class="profile" onclick="popUp2()">
-      <img src="images/andrea.jfif" id="andrea">
+      <img src="images/andreaPowellBLK.png" id="andrea">
       <div class="popup" id="andreaPopUp" >
-        <p>Anthony Morton</p>
-        <p>GitHub: https://github.com/anthonylouismorton</p>
-        <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
-        <p>Email: anthonymorton760@gmail.com</p>
+          <p><u>Andrea Powell</u></p>
+        <p>GitHub: <a href="https://github.com/andreavpowell">https://github.com/andreavpowell</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/andreavpowell/">https://www.linkedin.com/in/andreavpowell/</a></p>
+        <p>Email: <a href="mailto: andreavpowell@gmail.com">andreavpowell@gmail.com</a></p>
         <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
       </div>
     </div>
     <div id="georgeDiv" class="profile" onclick="popUp3()">
-      <img src="images/george.jfif" id="george">
+      <img src="images/georgeMeadBLK.jpg" id="george">
       <div class="popup" id="georgePopUp">
-        <p>George Mead</p>
+        <p><u>George Mead</u></p>
         <p>GitHub: https://github.com/gmeadiv</p>
         <p>LinkedIn: https://www.linkedin.com/in/george-mead/</p>
         <p>Email: gmeadiv@gmail.com</p>
@@ -42,9 +50,9 @@
       </div>
     </div>
     <div id="zackDiv" class="profile" onclick="popUp4()">
-      <img src="images/zack.jfif" id="zack">
+      <img src="images/zackaryGoodBLK.jpg" id="zack">
       <div class="popup" id="zackPopUp">
-        <p>Anthony Morton</p>
+        <p><u>Anthony Morton</u></p>
         <p>GitHub: https://github.com/anthonylouismorton</p>
         <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
         <p>Email: anthonymorton760@gmail.com</p>
@@ -52,9 +60,9 @@
       </div>
     </div>
     <div id="roopDiv" class="profile" onclick="popUp5()">
-      <img src="images/roop.jfif"  id="roop">
+      <img src="images/roopHayerBLK.jpg"  id="roop">
       <div class="popup" id="roopPopUp">
-        <p>Anthony Morton</p>
+        <p><u>Anthony Morton</u></p>
         <p>GitHub: https://github.com/anthonylouismorton</p>
         <p>LinkedIn: https://www.linkedin.com/in/anthony-louis-morton/</p>
         <p>Email: anthonymorton760@gmail.com</p>
