added shadow to title and added birthdate in the form

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <label>Name:</label>
         <input type ="text" name ="name" id ="name_user" required >
         <p> </p>
+        <legend>Birthdate</legend>
         <label>Month:</label>
         <input type ="number" name="month" min="1" max="12" id="month_user" required >
         <label>Day:</label>
