added spooky pictures

--- a/coinFlipRoom.html
+++ b/coinFlipRoom.html
@@ -32,7 +32,7 @@
       <main>
         <article class="comic">
           <div class="panel">
-            <img id="roop" src="images/roop.jfif">
+            <img id="roop" src="images/roopZombie.jpeg">
             <p class="text top-left">"What's the most you've ever lost ...</p>
             <p class="text bottom-right">... on a coin toss?"</p>
           </div>
@@ -55,7 +55,7 @@
               to call it."</p>
           </div>
         <div class="panel">
-          <img id="roopTwo" src="images/roop.jfif">
+          <img id="roopTwo" src="images/roopZombie.jpeg">
           <div id="headsOrTails" class="speech">
             <p>Call it,<span id="username"></span></p>
           <button type="button" id="heads">heads</button>
