--- a/living_room.html
+++ b/living_room.html
@@ -19,7 +19,7 @@
             <p class="text bottom-right">The stench of rotting flesh and dried blood fills your nostrils.</p>
           </div>
           <div class="panel">
-            <img id="kingGeorge" src="images/kinggeorge.png">
+            <img id="kingGeorge" src="images/kingGeorge.jpg">
             <p class="text top-left">A corpse wearing a rusted crown begins speaking.</p>
             <p class="text bottom-right">His breath is cold and damp like the fog in a graveyard.</p>
           </div>
