--- a/riddleRoom.html
+++ b/riddleRoom.html
@@ -76,7 +76,7 @@
       <main>
         <article class="comic">
           <div class="panel">
-            <img id="anthony" src="images/anthony.jpg">
+            <img id="anthony" src="images/anthonyClown.jpeg">
             <p class="text top-left"> And last, but not least ...</p>
             <p class="text bottom-right">... Riddle me this<span id="username"></span></p>
           </div>
