--- a/rpsRoom.html
+++ b/rpsRoom.html
@@ -31,7 +31,7 @@
       <main>
         <article class="comic">
           <div class="panel">
-            <img id="zack" src="images/zack.jfif">
+            <img id="zack" src="images/zackRobot.jpeg">
             <p class="text top-left">Let's play a game.</p>
             <p class="text bottom-right">How about roshambo!</p>
           </div>
@@ -50,7 +50,7 @@
             <p class="text bottom-right">"... makes you realize our bodies are just bags of meat waiting to be opened!"</p>
           </div>
           <div class="panel">
-            <img id="zackTwo" src="images/zack.jfif">
+            <img id="zackTwo" src="images/zackRobot.jpeg">
             <div id="rockPaperScissors" class="speech">
               <p>Pick a weapon<span id="username"></span></p>
               <button type="button" id="rock">Rock</button>
