few corrections on links

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -23,8 +23,8 @@
       <img src="images/anthonyMortonBLK.jpg" id="anthony">
       <div class="popup" id="anthonyPopUp">
         <p><u>Anthony Morton</u></p>
-        <p>GitHub: <a href="https://github.com/anthonylouismorton">https://github.com/anthonylouismorton</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/anthony-louis-morton/">https://www.linkedin.com/in/anthony-louis-morton/</a></p>
+        <p>GitHub: <a href="https://github.com/anthonylouismorton">github.com/anthonylouismorton</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/anthony-louis-morton/">linkedin.com/in/anthony-louis-morton/</a></p>
         <p>Email: <a href="mailto: anthonymorton760@gmail.com">anthonymorton760@gmail.com</a></p>
         <p>About: I am a C#/.net Full-stack developer. I have a background in industrial hygiene as well as a bachelor’s degree in occupational health and safety from Columbia Southern University. Before my time as an industrial hygienist, I served almost 9 years in the United States Marine Corps where I was a motor transport operator and an imagery analyst.</p>
       </div>
@@ -33,8 +33,8 @@
       <img src="images/andreaPowellBLK.png" id="andrea">
       <div class="popup" id="andreaPopUp">
           <p><u>Andrea Powell</u></p>
-        <p>GitHub: <a href="https://github.com/andreavpowell">https://github.com/andreavpowell</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/andreavpowell/">https://www.linkedin.com/in/andreavpowell/</a></p>
+        <p>GitHub: <a href="https://github.com/andreavpowell">github.com/andreavpowell</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/andreavpowell/">linkedin.com/in/andreavpowell/</a></p>
         <p>Email: <a href="mailto: andreavpowell@gmail.com">andreavpowell@gmail.com</a></p>
         <p>About: Software Developer breaking into the tech industry. I have always been interested in this field, but wasn't given many opportunities to explore it due to being raised in a small southern town.I have many years of experience in the sales and customer service industry. I hope to help transform the tech world into a more welcoming environment for young women and help people that are interested in lower income areas.</p>
       </div>
